--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,12 @@ dependencies = [
   "urllib3>=1.26.0"
 ]
 
+[project.urls]
+Homepage = "https://github.com/anthnyajp/HuntStand"
+Repository = "https://github.com/anthnyajp/HuntStand"
+Issues = "https://github.com/anthnyajp/HuntStand/issues"
+Changelog = "https://github.com/anthnyajp/HuntStand/blob/main/CHANGELOG.md"
+
 [project.optional-dependencies]
 dev = [
   "pytest>=8.0.0",
